@@ -6,8 +6,9 @@ html
   style
     include style.css
   body
-  - var pictures = data[1];
-  - var params = data[0];
+  - var bgImage = data[0];
+  - var params = data[1];
+  - var pictures = data[2];
     .wrapper
       .main
         .header
@@ -17,7 +18,7 @@ html
         .preview
           .container
             .img
-              img(src=`../bages/available/ui_playercard_0.png`)
+              img(src=`../bages/available/${bgImage}`)
               .user_info
                 #uplay_name Никнейм
                 #statistic
@@ -32,11 +33,12 @@ html
                 #rank_img
                   img(src="../ranks/No Rank.webp")
             .settings
-              label Цвет текста: #[input(type='color' class='text_color')]
+              //- label Цвет текста: #[input(type='color' class='text_color color_picker')]
+              label Цвет текста: #[span(class='color_picker_wrapper') #[input(type='color' class='text_color color_picker')]]
               label Рамка #[input(type='checkbox' id='border_checkbox' class='checkbox_hide')]
-              label(class='hide_toggle') Цвет рамки: #[input(type='color' class='border_color')]
+              label(class='hide_toggle') Цвет рамки: #[span(class='color_picker_wrapper') #[input(type='color' class='border_color color_picker')]]
               label Обводка текста #[input(type='checkbox' id='text_outline_checkbox' class='checkbox_hide')]
-              label(class='hide_toggle') Цвет обводки: #[input(type='color' class='text_outline_color')]
+              label(class='hide_toggle') Цвет обводки: #[span(class='color_picker_wrapper') #[input(type='color' class='text_outline_color color_picker')]]
               span Расположение ранга: #[select(class='rank_image_side_select') #[option(selected)="Справа"] #[option="Слева"]]
             .save_settings
               button#save_btn= 'Сохранить'
