@@ -168,7 +168,7 @@ img {
 .preview .container .settings {
     width: 100%;
     padding: 10px;
-    line-height: 1.5;
+    line-height: 1.7;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -177,11 +177,22 @@ img {
 .preview .container .settings > *:not(:last-child) {
     margin-right: 20px;
 }
+.preview .container .settings label {
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+}
+.preview .container .settings .color_picker_wrapper {
+    background-color: #FDFFFC;
+    display: inline-flex;
+    border: 1px solid #000;
+    border-radius: 50%;
+}
 .preview .container .settings input[type='color'] {
     width: 25px;
     height: 25px;
-    background-color: transparent;
-    border-radius: 50%;
+    opacity: 0;
+    border: none;
 }
 .preview .container .settings select {
     color: #FDFFFC;
@@ -222,5 +233,21 @@ img {
     outline: 1px solid #F1D302;
 }
 .hide_toggle {
-    display: none;
+    display: none !important;
 }
+/* input[type='color'] {
+    opacity: 0;
+	display: block;
+	width: 32px;
+	height: 32px;
+	border: none;
+}
+.color_picker_wrapper {
+    float: right;
+    border: 1px solid #000;
+} */
+/* label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
