@@ -1,9 +1,12 @@
 -- FIX
+В views/index.js можно все события вынести в функции, чтобы избежать дубликации
 Добавить возможность добавлять и удалять фоны. Удалять только разрешенным ролям
 Добавить обработку ошибочных путей для сайта
 В мониторинге профиль может не существовать в базе, нужно это учесть
 Если профиль удален из статистики, то нужно удалять его бейдж из локального хранилища
 -- FEATURES
+Мобильную версию сайта
+Добавить сброс таймеров для статистики
 Добавить анимацию "сохранения" настроек бейджа
 Добавить какой-то шифр для GET параметров
 Not sure about uplay rules with nicknames. Probably monitoring should depending on permanent links
